--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <video src="video_preview_h264.mp4" autoplay muted loop class="vid"></video>
  </section>
 
- <section>
+ <section class="second-cl">
   <div class="text-first">
    <h2>Important Question for exam</h1>
   </div>
