--- a/index.html
+++ b/index.html
@@ -6,216 +6,72 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
 </head>
 <body>
-  <div class='cursor'>
-    <div class='cursor_point'></div>
-    <div class='cursor_outer'></div>
-  </div>
-  <div class='portfolio'>
-    <div class='portfolio_home'>
-      <div style='position: fixed; z-index: -99; width: 2320px; height: 180%; left: 0;top: -38%;'>
-        <iframe frameborder="0" height="100%" width="100%" src="https://youtube.com/embed/tz8Puc4W5BM?autoplay=1&controls=0&showinfo=0&autohide=1&mute=1"></iframe>
-      </div>
-      <div class='portfolio_home__header'>
-        <div class='hamburger trigger'>
-          <div class='hamburger_part'></div>
-          <div class='hamburger_part'></div>
-          <div class='hamburger_part'></div>
+  <main>
+    <ul class='slider'>
+      <li class='item' style="background-image: url('https://cdn.mos.cms.futurecdn.net/dP3N4qnEZ4tCTCLq59iysd.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Lossless Youths"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+            praesentium nisi. Id laboriosam ipsam enim. </p>
+          <button>Read More</button>
         </div>
-      </div>
-      <div class='portfolio_home__title'>
-        <div class='logo'>
-          <img class='first' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp.png'>
-          <img class='second' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp2.png'>
-          <div class='page_portfolio'>
-            <div class='portfolio_home__header'>
-              <div class='logoMain'>
-                <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/cagencylogo.png'>
-              </div>
-              <div class='nav'>
-                <ul>
-                  <li class='active trigger'>Our work</li>
-                  <li class='trigger'>Our services</li>
-                  <li class='trigger'>About us</li>
-                  <li class='trigger'>Contact us</li>
-                </ul>
-              </div>
-              <div class='number black'>0161 345 3464</div>
-              <div class='hamburger black trigger'>
-                <div class='hamburger_part'></div>
-                <div class='hamburger_part'></div>
-                <div class='hamburger_part'></div>
-              </div>
-            </div>
-            <div class='slider_note'>
-              Drag through our work
-            </div>
-            <div class='portfolio_home__work'>
-              <div class='portfolio_home__header work'>
-                <div class='back'>
-                  <img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'>
-                </div>
-                <div class='logoMain'>
-                  <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/slogowhite.png'>
-                </div>
-                <div class='nav'>
-                  <ul>
-                    <li class='active trigger'>Our work</li>
-                    <li class='trigger'>Our services</li>
-                    <li class='trigger'>About us</li>
-                    <li class='trigger'>Contact us</li>
-                  </ul>
-                </div>
-                <div class='number white'>0161 345 3464</div>
-                <div class='hamburger white trigger'>
-                  <div class='hamburger_part'></div>
-                  <div class='hamburger_part'></div>
-                  <div class='hamburger_part'></div>
-                </div>
-              </div>
-              <div class='slideClone'>
-                <div class='title f'>
-                  .01
-                  <br>
-                  My Protein
-                </div>
-                <div class='image'>
-                  <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/fud.png'>
-                  <div class='overlay'></div>
-                  <div class='cats'>ADVERTISING   DESIGN   DIGITAL</div>
-                  <div class='title'>My protein rebrand and digital campaign</div>
-                </div>
-              </div>
-              <div class='slideClone'>
-                <div class='title f'>
-                  .02
-                  <br>
-                  Nike Air Max
-                </div>
-                <div class='image'>
-                  <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/nike.png'>
-                  <div class='overlay'></div>
-                  <div class='cats'>ADVERTISING   DESIGN   DIGITAL   STRATEGY</div>
-                  <div class='title'>Nike Air max video campaign 2017</div>
-                </div>
-              </div>
-              <div class='slideClone'>
-                <div class='title f'>
-                  .03
-                  <br>
-                  Apple Watch
-                </div>
-                <div class='image'>
-                  <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/rpo.jpg'>
-                  <div class='overlay'></div>
-                  <div class='cats'>ADVERTISING   DIGITAL   STRATEGY</div>
-                  <div class='title'>The new Apple Watch digital campaign 2019</div>
-                </div>
-              </div>
-              <div class='slideClone'>
-                <div class='title f'>
-                  .04
-                  <br>
-                  Jade Teriyaki
-                </div>
-                <div class='image'>
-                  <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/orangetyhing.png'>
-                  <div class='overlay'></div>
-                  <div class='cats'>ADVERTISING   DESIGN   DIGITAL   STRATEGY</div>
-                  <div class='title'>Another agency did this campaign, not us</div>
-                </div>
-              </div>
-              <img class='scroll' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'>
-            </div>
-            <div class='portfolio_home__slider'>
-              <div class='slider_inner'>
-                <div class='slider_inner__slide'>
-                  <div class='title'>
-                    .01
-                    <br>
-                    My Protein
-                  </div>
-                  <div class='image'>
-                    <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/fud.png'>
-                    <div class='overlay'></div>
-                    <div class='cats'>ADVERTISING   DESIGN   DIGITAL</div>
-                    <div class='title'>My protein rebrand and digital campaign</div>
-                    <div class='button'>
-                      View case study
-                      <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
-                    </div>
-                  </div>
-                </div>
-                <div class='slider_inner__slide'>
-                  <div class='title'>
-                    .02
-                    <br>
-                    Nike Air Max
-                  </div>
-                  <div class='image'>
-                    <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/nike.png'>
-                    <div class='overlay'></div>
-                    <div class='cats'>ADVERTISING   DESIGN   DIGITAL   STRATEGY</div>
-                    <div class='title'>Nike Air max video campaign 2017</div>
-                    <div class='button'>
-                      View case study
-                      <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
-                    </div>
-                  </div>
-                </div>
-                <div class='slider_inner__slide'>
-                  <div class='title'>
-                    .03
-                    <br>
-                    Apple Watch
-                  </div>
-                  <div class='image'>
-                    <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/rpo.jpg'>
-                    <div class='overlay'></div>
-                    <div class='cats'>ADVERTISING   DIGITAL   STRATEGY</div>
-                    <div class='title'>The new Apple Watch digital campaign 2019</div>
-                    <div class='button'>
-                      View case study
-                      <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
-                    </div>
-                  </div>
-                </div>
-                <div class='slider_inner__slide'>
-                  <div class='title'>
-                    .04
-                    <br>
-                    Jade Teriyaki
-                  </div>
-                  <div class='image'>
-                    <img draggable='false' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/orangetyhing.png'>
-                    <div class='overlay'></div>
-                    <div class='cats'>ADVERTISING   DESIGN   DIGITAL   STRATEGY</div>
-                    <div class='title'>Another agency did this campaign, not us</div>
-                    <div class='button'>
-                      View case study
-                      <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+      </li>
+      <li class='item' style="background-image: url('https://i.redd.it/tc0aqpv92pn21.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Estrange Bond"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+            praesentium nisi. Id laboriosam ipsam enim. </p>
+          <button>Read More</button>
         </div>
-        <hr>
-        <h1>
-          We are an Independent
-          <span>Creative Advertising</span>
-          &amp;
-          <span>Branding Agency</span>
-        </h1>
-        <img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'>
-      </div>
-    </div>
-  </div>
+      </li>
+      <li class='item' style="background-image: url('https://wharferj.files.wordpress.com/2015/11/bio_north.jpg')">
+        <div class='content'>
+          <h2 class='title'>"The Gate Keeper"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+            praesentium nisi. Id laboriosam ipsam enim. </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://images7.alphacoders.com/878/878663.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Last Trace Of Us"</h2>
+          <p class='description'>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore fuga voluptatum, iure corporis inventore praesentium nisi. Id laboriosam ipsam enim.
+          </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://theawesomer.com/photos/2017/07/simon_stalenhag_the_electric_state_6.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Urban Decay"</h2>
+          <p class='description'>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore fuga voluptatum, iure corporis inventore praesentium nisi. Id laboriosam ipsam enim.
+          </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://da.se/app/uploads/2015/09/simon-december1994.jpg')">
+        <div class='content'>
+          <h2 class='title'>"The Migration"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+            praesentium nisi. Id laboriosam ipsam enim. </p>
+          <button>Read More</button>
+        </div>
+      </li>
+    </ul>
+    <nav class='nav'>
+      <ion-icon class='btn prev' name="arrow-back-outline"></ion-icon>
+      <ion-icon class='btn next' name="arrow-forward-outline"></ion-icon>
+    </nav>
+  </main>
   
-  
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
