--- a/index.html
+++ b/index.html
@@ -164,6 +164,36 @@
       </div>
     </div>
   </div>
+
+  <!-- //////// -->
+  <div class="quize">
+    <div class="question-bar">
+      <h2 class="qestion">1) Which type of JavaScript language is ___</h2>
+      <ul>
+        <li>
+          <input type="radio" name="option" id="a" class="ansList">
+          <label for="a" class="ansa">Object-Oriented</label>
+        </li>
+        <li>
+          <input type="radio" name="option" id="b" class="ansList">
+          <label for="b" class="ansb">Object-Based</label>
+        </li>
+        <li>
+          <input type="radio" name="option" id="c" class="ansList">
+          <label for="c" class="ansc">Assembly-language</label>
+        </li>
+        <li>
+          <input type="radio" name="option" id="d" class="ansList">
+          <label for="d" class="ansd">High-level</label>
+        </li>
+  
+      </ul>
+      <div class="footer-button">
+        <button id="submit" class="submitBtn">Submit</button>
+      </div>
+    </div>
+    <div id="showscore" class="scoreArea"></div>
+  </div>
  
   
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
